--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <p>
                     <p style="text-align:center">
                     <a href="mailto:chuanyuFu99@outlook.com">Email</a> &nbsp/&nbsp
-                    <a href="https://github.com/fcyycf">Github</a> &nbsp/&nbsp
+                    <a href="https://github.com/fcyycf">Github</a>
                     <!-- <a href="https://scholar.google.com.hk/citations?user=p8iaZqkAAAAJ&hl=zh-CN">Google Scholar</a> -->
                     <!-- <a href="https://orcid.org/0000-0002-7423-0090">ORCID</a> -->
                     </p>
@@ -252,7 +252,7 @@
                     <a href="https://ieeexplore.ieee.org/abstract/document/10835221">PDF</a>
                     `,
             papertype: 'Academic Journals',
-            selected: true,
+            // selected: true,
             year: '2025',
         },
         {
