--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <name>Chuanyu Fu &nbsp 符传毓</name>
                     </p>
                     <p>
-                    I am currently serving as a research assistant, also an incoming Ph.D student (start from Sep. 2025) 
+                    I am currently serving as a research assistant, also an incoming Ph.D student (starting in Sep. 2025) 
                     at <a href="https://scst.sysu.edu.cn/index.htm">the School of Cyber Science and Technology, Sun Yat-sen University (SYSU)</a>,
                     under the supervision of <a href="https://guanyingc.github.io/">Prof. Guanying Chen</a>.                     
                     <br> <br>
