--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                     "Xiaoming Xiong", 
                     "Shuting Cai#"
                     ],
-            venue: "ISPRS Journal of Photogrammetry and Remote Sensing",
+            venue: "IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing",
             links: `
                     <a href="https://ieeexplore.ieee.org/abstract/document/10018887">PDF</a>
                     `,
