--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     "Shuguang Cui",
                     "Xiaochun Cao"
                     ],
-            venue: "arXiv 2025",
+            venue: "arXiv preprint, 2025",
             links: `
                     <a href='https://arxiv.org/abs/xxx.xxx'>arXiv</a> |
                     <a href='https://fcyycf.github.io/RobustSplat/'>Project Page</a> |
@@ -274,7 +274,7 @@
                     "Xiaoming Xiong",
                     "Shuting Cai"
                     ],
-            venue: "ISPRS Journal of Photogrammetry and Remote Sensing",
+            venue: "ISPRS Journal of Photogrammetry and Remote Sensing, 2024",
             links: `
                     <a href="https://www.sciencedirect.com/science/article/abs/pii/S0924271624000273">PDF</a>
                     `,
@@ -297,7 +297,7 @@
                     "Qiku Cao",
                     "Shuting Cai#"
                     ],
-            venue: "Advanced Engineering Informatics",
+            venue: "Advanced Engineering Informatics, 2024",
             links: `
                     <a href="https://www.sciencedirect.com/science/article/abs/pii/S147403462400555X">PDF</a>
                     `,
@@ -318,7 +318,7 @@
                     "Xuexi Zhang#",
                     "Shuting Cai#"
                     ],
-            venue: "Remote Sensing",
+            venue: "Remote Sensing, 2023",
             links: `
                     <a href="https://www.mdpi.com/2072-4292/15/9/2474">PDF</a>
                     `,
@@ -340,7 +340,7 @@
                     "Xiaoming Xiong", 
                     "Shuting Cai#"
                     ],
-            venue: "IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing",
+            venue: "IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing, 2023",
             links: `
                     <a href="https://ieeexplore.ieee.org/abstract/document/10018887">PDF</a>
                     `,
