--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
             imageSrcAfter: "data/tim.webp",
             title: "LF-MVS: Line Features assisted PatchMatch Multi-View Stereo",
             authors: [
-                    "Chaofeng Wu",
-                    "Zijie Huang", 
+                    "Chaofeng Wu*",
+                    "Zijie Huang*", 
                     "Nan Huang", 
                     "<strong>Chuanyu Fu</strong>", 
                     "Yongjian Liao", 
@@ -287,8 +287,8 @@
             imageSrcAfter: "data/aei.webp",
             title: "Segmentation-aware prior assisted joint global information aggregated 3D building reconstruction",
             authors: [
-                    "Hongxin Peng", 
-                    "Yongjian Liao", 
+                    "Hongxin Peng*", 
+                    "Yongjian Liao*", 
                     "Weijun Li", 
                     "<strong>Chuanyu Fu</strong>", 
                     "Guoxin Zhang", 
