--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 
             <!-- ---------------------- Research Highlight------------------------ -->
-            <!-- <table width="100%" align="center" border="0" cellspacing="0" style="padding-top:40px;padding-left:20px;padding-bottom:10px"><tbody>
+            <table width="100%" align="center" border="0" cellspacing="0" style="padding-top:40px;padding-left:20px;padding-bottom:10px"><tbody>
                 <tr> <td>
                         <heading>Research Highlight</heading>
                   </td> </tr>
@@ -107,21 +107,17 @@
                 <tr> <td>
                   <div class="grid-container">
                     <div>
-                      <a href="https://zyqz97.github.io/Aerial_Lifting/">
-                          <img src="data/cvpr24_aeriallift_highlight.gif" height="120" alt="" />
+                      <a href="https://fcyycf.github.io/RobustSplat/">
+                           <img src="data/robustsplat.gif" height="120" alt="" />
                       </a>
-                      <p>[CVPR'24] Aerial Lifting: Neural Aerial Urban Semantic and Building Instance Lifting from Aerial Imagery</p>
+                       <p>[Preprint] RobustSplat: Decoupling Densification and Dynamics for Transient-Free 3DGS</p>
                     </div>
-                    <div>
-                      <a href="https://zyqz97.github.io/GP_NeRF/">
-                          <img src="data/gp_nerf_after.gif" height="120" alt="" />
-                      </a>
-                      <p>Efficient Large-scale Scene Representation with a Hybrid of High-resolution Grid and Plane Features</p>
-                    </div>
+
+
                   </div>
                 </td> </tr>
               </tbody> 
-            </table> -->
+            </table>
 
             
             
