--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     ],
             venue: "arXiv preprint, 2025",
             links: `
-                    <a href='https://arxiv.org/abs/xxx.xxx'>arXiv</a> |
+                    <a href='https://arxiv.org/abs/2506.02751'>arXiv</a> |
                     <a href='https://fcyycf.github.io/RobustSplat/'>Project Page</a> |
                     <a href='https://github.com/fcyycf/RobustSplat'>Code</a> 
                     `,
