--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 
             <!-- ---------------------- Research Highlight------------------------ -->
-            <table width="100%" align="center" border="0" cellspacing="0" style="padding-top:40px;padding-left:20px;padding-bottom:10px"><tbody>
+            <!-- <table width="100%" align="center" border="0" cellspacing="0" style="padding-top:40px;padding-left:20px;padding-bottom:10px"><tbody>
                 <tr> <td>
                         <heading>Research Highlight</heading>
                   </td> </tr>
@@ -117,7 +117,7 @@
                   </div>
                 </td> </tr>
               </tbody> 
-            </table>
+            </table> -->
 
             
             
@@ -319,7 +319,7 @@
                     <a href="https://www.mdpi.com/2072-4292/15/9/2474">PDF</a>
                     `,
             papertype: 'Academic Journals',
-            selected: true,
+            // selected: true,
             year: '2023',
         },
         {
