--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </table>
               
             <!-- ---------------------- News ------------------------ -->
-            <!-- <table width="92%" align="left" border="0" cellspacing="0" style="padding-left:20px;padding-bottom:10px"><tbody>
+            <table width="92%" align="left" border="0" cellspacing="0" style="padding-left:20px;padding-bottom:10px"><tbody>
                 <tr> <td>
                     <heading>News</heading><br>
                   </td> </tr>
@@ -67,11 +67,10 @@
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>   
               <div class="news">
               <ul class="news" style="margin-top: 5px; padding-top: 0;">
-                  <li>2024-09: <a href="https://zyqz97.github.io/GP_NeRF/">GP-NeRF</a> is accepted by Pattern Recognition!</li>
-                  <li>2024-02: <a href="https://zyqz97.github.io/Aerial_Lifting/">Aerial Lifting</a> is accepted by CVPR 2024!</li>
+                  <li>2025-06: &#x1F389; &#x1F389; <a href="https://fcyycf.github.io/RobustSplat/">RobustSplat</a> is accepted by ICCV 2025!</li>
               </ul>
               </div>
-            </table> -->
+            </table>
 
 
             <!-- ---------------------- Previous Experiences------------------------ -->
@@ -219,7 +218,7 @@
                     "Shuguang Cui",
                     "Xiaochun Cao"
                     ],
-            venue: "arXiv preprint, 2025",
+            venue: "International Conference on Computer Vision (ICCV), 2025",
             links: `
                     <a href='https://arxiv.org/abs/2506.02751'>arXiv</a> |
                     <a href='https://fcyycf.github.io/RobustSplat/'>Project Page</a> |
