--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
                     <name>Chuanyu Fu &nbsp 符传毓</name>
                     </p>
                     <p>
-                    I am currently serving as a research assistant, also an incoming Ph.D student (starting in Sep. 2025) 
-                    at the School of Cyber Science and Technology, Sun Yat-sen University (SYSU),
+                    I am currently a first-year Ph.D. student (from Sep. 2025) at the School of Cyber Science and Technology, Sun Yat-sen University (SYSU),
                     under the supervision of <a href="https://guanyingc.github.io/">Prof. Guanying Chen</a>.                     
                     <br> <br>
                   
-                    I received M.S. degrees from Guangdong University of Technology (GDUT) in 2024. Before that, I received my B.Eng. from Nanjing University of Posts and Telecommunications (NJUPT).
-                    </br></br>
+                    <!-- I received M.S. degrees from Guangdong University of Technology (GDUT) in 2024. Before that, I received my B.Eng. from Nanjing University of Posts and Telecommunications (NJUPT).
+                    </br></br> -->
                     
                     My research interests are in computer vision. Specifically, 3D reconstruction, neural rendering, etc.
                     </br></br>
@@ -81,6 +80,11 @@
               </tbody> 
             </table>
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                <tr>
+                  <td style=width:35%;padding-left:30px> Jul. 2024 - Aug. 2025 </td>
+                  <td style=width:65%;padding-left:00px> Research Assistant at SYSU, supervised by <a href="https://guanyingc.github.io/">Prof. Guanying Chen</a></td>
+                </tr>
+
                 <tr>
                   <td style=width:35%;padding-left:30px> Sep. 2021 - Jun. 2024 </td>
                   <td style=width:65%;padding-left:00px> M.S. at GDUT, supervised by <a href="https://sme.gdut.edu.cn/info/1183/1204.htm">Prof. Shuting Cai</a></td>
@@ -196,6 +200,7 @@
             "Shuguang Cui": {homepage: "https://scholar.google.com.hk/citations?user=1o_qvR0AAAAJ&hl=en"},
             "Xiaochun Cao": {homepage: "https://scholar.google.com/citations?user=PDgp6OkAAAAJ&hl=en"},
             "Chuan Huang": {homepage: "https://scholar.google.com/citations?user=ei4jR4IAAAAJ&hl=en"},
+            "Yuan Xiong": {homepage: "https://scst.sysu.edu.cn/members/members02/1416453.htm"},
             "Kunbin Yao": {homepage: "https://kbyao357.github.io/"},
             "Yuqi Zhang": {homepage: "https://zyqz97.github.io/"},
             "Nan Huang": {homepage: "https://scholar.google.com/citations?hl=zh-CN&user=Y06BjSIAAAAJ"},            
@@ -224,7 +229,7 @@
                     <a href='https://fcyycf.github.io/RobustSplat/'>Project Page</a> |
                     <a href='https://github.com/fcyycf/RobustSplat'>Code</a> 
                     `,
-            papertype: 'Preprints',
+            papertype: 'Conference Proceedings',
             selected: true,
             year: '2025',
         },
