--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>   
               <div class="news">
               <ul class="news" style="margin-top: 5px; padding-top: 0;">
+                  <li>2025-11: &#x1F389; &#x1F389; <a href="https://zyqz97.github.io/CloseUpShot/">CloseUpShot</a> is accepted by TVCG 2026!</li>
                   <li>2025-06: &#x1F389; &#x1F389; <a href="https://fcyycf.github.io/RobustSplat/">RobustSplat</a> is accepted by ICCV 2025!</li>
               </ul>
               </div>
@@ -209,6 +210,27 @@
         };
 
     const allPublications = [
+        {
+            imageSrcBefore: "data/2025_closeupshot2.jpg",
+            imageSrcAfter: "data/2025_closeupshot2.gif",
+            title: "CloseUpShot: Close-up Novel View Synthesis from Sparse-views via Point-conditioned Diffusion Model",
+            authors: [
+                    "Yuqi Zhang", 
+                    "Guanying Chen#", 
+                    "Jiaxing Chen",
+                    "<strong>Chuanyu Fu</strong>",
+                    "Chuan Huang",
+                    "Shuguang Cui",
+                ],
+            venue: `IEEE Transactions on Visualization and Computer Graphics (TVCG), 2026`,
+            links: `
+                  <a href="https://arxiv.org/abs/2511.13121">arXiv</a> |
+                  <a href="https://zyqz97.github.io/CloseUpShot/">Project Page</a>
+                    `,
+            selected: true,
+            papertype: 'Academic Journals',
+            year: '2025',
+        },
         {
             imageSrcBefore: "data/robustsplat.jpg",
             imageSrcAfter: "data/robustsplat.gif",
