--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
                 <tr>
                   <td style=width:35%;padding-left:30px> Sep. 2021 - Jun. 2024 </td>
-                  <td style=width:65%;padding-left:00px> M.S. at GDUT, supervised by <a href="https://sme.gdut.edu.cn/info/1183/1204.htm">Prof. Shuting Cai</a></td>
+                  <td style=width:65%;padding-left:00px> M.S. at GDUT, supervised by <a href="https://sme.gdut.edu.cn/info/1018/2430.htm">Prof. Shuting Cai</a></td>
                 </tr>
 
                 <tr>
@@ -204,6 +204,7 @@
             "Yuan Xiong": {homepage: "https://scst.sysu.edu.cn/members/members02/1416453.htm"},
             "Kunbin Yao": {homepage: "https://kbyao357.github.io/"},
             "Yuqi Zhang": {homepage: "https://zyqz97.github.io/"},
+            "Jiaxing Chen": {homepage: "https://github.com/Chjx395"},
             "Nan Huang": {homepage: "https://scholar.google.com/citations?hl=zh-CN&user=Y06BjSIAAAAJ"},            
             
             "": {homepage: ""},
