--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </p>
                   </td>
                   <td style="padding:2.5%;width:40%;max-width:40%">
-                    <a href="fcy.jpg"><img style="width:60%;max-width:80%" alt="profile photo" src="fcy.jpg" class="hoverZoomLink"></a>
+                    <a href="fcy.png"><img style="width:60%;max-width:80%" alt="profile photo" src="fcy.jpg" class="hoverZoomLink"></a>
                   </td>
                 </tr>
 
@@ -66,7 +66,7 @@
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>   
               <div class="news">
               <ul class="news" style="margin-top: 5px; padding-top: 0;">
-                  <li>2025-11: &#x1F389; &#x1F389; <a href="https://zyqz97.github.io/CloseUpShot/">CloseUpShot</a> is accepted by TVCG 2026!</li>
+                  <li>2025-11: &#x1F389; &#x1F389; <a href="https://zyqz97.github.io/CloseUpShot/">CloseUpShot</a> is accepted by TVCG 2025!</li>
                   <li>2025-06: &#x1F389; &#x1F389; <a href="https://fcyycf.github.io/RobustSplat/">RobustSplat</a> is accepted by ICCV 2025!</li>
               </ul>
               </div>
@@ -223,7 +223,7 @@
                     "Chuan Huang",
                     "Shuguang Cui",
                 ],
-            venue: `IEEE Transactions on Visualization and Computer Graphics (TVCG), 2026`,
+            venue: `IEEE Transactions on Visualization and Computer Graphics (TVCG), 2025`,
             links: `
                   <a href="https://arxiv.org/abs/2511.13121">arXiv</a> |
                   <a href="https://zyqz97.github.io/CloseUpShot/">Project Page</a>
