--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </p>
                   </td>
                   <td style="padding:2.5%;width:40%;max-width:40%">
-                    <a href="fcy.png"><img style="width:60%;max-width:80%" alt="profile photo" src="fcy.jpg" class="hoverZoomLink"></a>
+                    <a href="fcy.jpg"><img style="width:60%;max-width:80%" alt="profile photo" src="fcy.jpg" class="hoverZoomLink"></a>
                   </td>
                 </tr>
 
